syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";

package repository;

service RepositoryService {
  rpc Execute(RepositoryRequest) returns (RepositoryResponse) {}
}

message RepositoryRequest {
  string repo_name = 1;
  string method_name = 2;
  bytes payload = 3;
}

message RepositoryResponse {
  bytes payload = 1;
  string err_msg = 2;
}
